--- a/TickTackToe/TickTackToe.resx
+++ b/TickTackToe/TickTackToe.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAABAAAABQAAAAAAAAAAAAA
+        AKYAAAAVAAAAAAAAAAAAAABbAAAAsQAAALEAAABcAAAAAAAAAAAAAAA0AAAAhgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADpAAAAeAAAAAYAAACxAAAAswAA
+        AAAAAAAAAAAA/wAAAC8AAAAAAAAAgQAAAO4AAACGAAAAhgAAAO4AAACBAAAAAAAAAF8AAADPAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAD0AAAA1QAA
+        ANkAAAAaAAAAAAAAAAAAAAD/AAAALwAAAAkAAAD3AAAARQAAAAAAAAAAAAAARQAAAPcAAAAJAAAAXwAA
+        AM8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgAA
+        AMAAAAD/AAAAhwAAAAAAAAAAAAAAAAAAAP8AAAAvAAAAGAAAAP8AAAAbAAAAAAAAAAAAAAAbAAAA/wAA
+        ABgAAABfAAAAzwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAACwAAAA2QAAAFkAAAD0AAAAbwAAAAAAAAAAAAAA/wAAAC8AAAAAAAAAzwAAAKMAAAANAAAADQAA
+        AKMAAADPAAAAAAAAAF8AAADPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAgAAAJMAAAAaAAAAAAAAAD0AAABhAAAAAAAAAAAAAAD/AAAALwAAAAAAAAAnAAAA1gAA
+        APsAAAD7AAAA1gAAACcAAAAAAAAAXwAAAM8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAAvAAAAAAAA
+        AAAAAAACAAAALwAAAC8AAAACAAAAAAAAAAAAAABfAAAAzwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAA
+        AC8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF8AAADPAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApAAAAPsAAAD7AAAA+wAAAPsAAAD7AAAA+wAA
+        APsAAAD/AAAA/AAAAPsAAAD7AAAA+wAAAPsAAAD7AAAA+wAAAPsAAAD7AAAA/QAAAP4AAAD7AAAA+wAA
+        APsAAAD7AAAA+wAAAPsAAAD7AAAAowAAAAAAAAAAAAAAAAAAAAAAAAAXAAAAMgAAADIAAAAyAAAAMgAA
+        ADIAAAAyAAAAMgAAAP8AAABZAAAAMgAAADIAAAAyAAAAMgAAADIAAAAyAAAAMgAAADIAAAB/AAAA2AAA
+        ADIAAAAyAAAAMgAAADIAAAAyAAAAMgAAADIAAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAC8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AF8AAADPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAALwAAAAAAAAAQAAAAOgAAAAAAAAAAAAAAPwAA
+        ABgAAAAAAAAAXwAAAM8AAAAAAAAAAAAAAEgAAADQAAAA+gAAANEAAABJAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAAvAAAAAAAAADoAAAD4AAAAWgAA
+        AFkAAAD4AAAAPwAAAAAAAABfAAAAzwAAAAAAAAAxAAAA+AAAAH0AAAA3AAAAfAAAAPgAAAAyAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAC8AAAAAAAAAAAAA
+        AFkAAAD4AAAA+AAAAFkAAAAAAAAAAAAAAF8AAADPAAAAAAAAAI4AAACrAAAAAAAAAAAAAAAAAAAAqQAA
+        AJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAALwAA
+        AAAAAAAAAAAAWQAAAPgAAAD4AAAAWgAAAAAAAAAAAAAAXwAAAM8AAAAAAAAAjgAAAKsAAAAAAAAAAAAA
+        AAAAAACpAAAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AP8AAAAvAAAAAAAAAEAAAAD4AAAAWQAAAFkAAAD4AAAAOwAAAAAAAABfAAAAzwAAAAAAAAAwAAAA+AAA
+        AH0AAAA3AAAAfAAAAPgAAAAyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/wAAAC8AAAAAAAAAGQAAAEAAAAAAAAAAAAAAADoAAAARAAAAAAAAAF8AAADPAAAAAAAA
+        AAAAAABIAAAA0AAAAPkAAADRAAAASQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAD/AAAALwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXwAA
+        AM8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAyAAAAXAAA
+        AFwAAABcAAAAXAAAAFwAAABcAAAAXAAAAP8AAAB7AAAAXAAAAFwAAABcAAAAXAAAAFwAAABcAAAAXAAA
+        AFwAAACZAAAA4AAAAFwAAABcAAAAXAAAAFwAAABcAAAAXAAAAFwAAAAnAAAAAAAAAAAAAAAAAAAAAAAA
+        AIgAAADSAAAA0gAAANIAAADSAAAA0gAAANIAAADSAAAA/wAAANoAAADSAAAA0gAAANIAAADSAAAA0gAA
+        ANIAAADSAAAA0gAAAOMAAAD2AAAA0gAAANIAAADSAAAA0gAAANIAAADSAAAA0gAAAG8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAALwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAXwAAAM8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABsAAAA4AAAADgAAAAAAAAAAAAAAAAAAAP8AAAAvAAAAAAAA
+        AAAAAAACAAAALgAAAC4AAAACAAAAAAAAAAAAAABfAAAAzwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAACbAAAA/QAAAPgAAAD1AAAAZwAAAAAAAAAAAAAA/wAA
+        AC8AAAAAAAAAJwAAANUAAAD7AAAA+wAAANYAAAAnAAAAAAAAAF8AAADPAAAAAAAAAAAAAABwAAAAKwAA
+        AAAAAAAqAAAAgwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbwAAAOMAAAAtAAAAAQAAAFQAAAD5AAAAMQAA
+        AAAAAAD/AAAALwAAAAAAAADPAAAAowAAAA0AAAANAAAAowAAAM8AAAAAAAAAXwAAAM8AAAAAAAAAAAAA
+        AI4AAADpAAAAVAAAAOgAAACSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC3AAAAewAAAAAAAAAAAAAAAAAA
+        ALsAAAB4AAAAAAAAAP8AAAAvAAAAGAAAAP8AAAAcAAAAAAAAAAAAAAAbAAAA/wAAABgAAABfAAAAzwAA
+        AAAAAAAAAAAAAQAAAKQAAAD/AAAApwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKEAAAClAAAAAAAA
+        AAAAAAAGAAAA3QAAAGEAAAAAAAAA/wAAAC8AAAAJAAAA9wAAAEUAAAAAAAAAAAAAAEUAAAD3AAAACQAA
+        AF8AAADPAAAAAAAAAAAAAAAqAAAA6AAAANUAAADpAAAAKwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALQAA
+        APMAAACpAAAAdgAAAMkAAADWAAAACgAAAAAAAAD/AAAALwAAAAAAAACBAAAA7gAAAIUAAACFAAAA7gAA
+        AIEAAAAAAAAAXwAAAM8AAAAAAAAAAAAAANIAAACYAAAAAgAAAJYAAADKAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAKgAAAJwAAAC7AAAAhwAAABIAAAAAAAAAAAAAAKgAAAAVAAAAAAAAAAAAAABcAAAAsQAA
+        ALEAAABcAAAAAAAAAAAAAAA1AAAAiAAAAAAAAAAAAAAAGAAAAAEAAAAAAAAAAAAAAA8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////szDP/4MgT/+DBg//hwYP/4MgT/8TIE///zDP//8/z/8AA
+        AAPAAAAD/8/z///Jkwf/yBID/8wyc//MMnP/yBID/8mTB//P8//AAAADwAAAA//P8//xzDP/wMgTJ8BI
+        EwfOQYMHzEGDB8BIEwfgzDM3//////////8=
+</value>
+  </data>
 </root>
